tests/valid/46494_power_function/power_func.agu
-- 46494, Leonor Figueirinhas

let power (n) : Int -> Int = n * n

let _ : Unit =
    print(power(5))