tests/invalid-semantic/46494_semantic_error_1/undeclared_variable.agu
-- 46494, Leonor Figueirinhas

let _ : Unit =
    set k = true